# blitz-scale

./: .clang-format  .gitignore  .gitmodules  .gitsubmodule  CMakeLists.txt  Cargo.toml  Dockerfile  NOTICE  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: devel-task-template.md
LICENSES/: Apache-2.0.txt
config/: e2e-blitz.toml  eval_ablation_tp2.toml  eval_ablation_tp4.toml  eval_e2e_ds_tp1.toml  eval_e2e_ds_tp2.toml  eval_e2e_ds_tp4.toml  eval_e2e_sllm_blitz_tp1.toml  eval_e2e_sllm_blitz_tp2.toml  eval_e2e_sllm_blitz_tp4.toml  test2.toml  test_tp_live.toml  tp-fast-live-dbg.toml
docs/: reproduce.md
proto/: CMakeLists.txt  generate.proto
router_v2/: Cargo.toml
router_v2/src/: error.rs  health.rs  infer.rs  lib.rs  main.rs  queue.rs  server.rs  statistic.rs  stub.rs  validation.rs
router_v2/src/replica/: config.rs  disaggregation.rs  metrics.rs  mod.rs  relay_queue.rs
router_v2/src/replica/cybernetics/: exec_blitz.rs  exec_serverless.rs  mod.rs  planner.rs
router_v2/src/replica/steersman/: mod.rs
rust-proto/: Cargo.toml  build.rs
rust-proto/src/: lib.rs
scripts/: nsys-llama3.sh  read_softlink.py
scripts/batch/: collocation_utils.py  generate.sh  launch_router.py  main.py  parser.py  plot.py  rank_to_rnic.py  remoteprocess.py  runner.py  template.toml  test_load_latency.py  uniform.py  utils.py
scripts/debug/: awesome_grep.py  bcast_test.py  bsight.py  generate_pb2.py  generate_pb2_grpc.py  pipe_gpu_usage.py  stp_lck_chk.py
scripts/figure/: align_timestamp.py  draw_waiting_tokens.py  extract_scale_events.py  plot_cache_miss.py  process_burstgpt_2.py  process_client_log.py  process_dataset.py  process_dataset_v2.py
scripts/motiv/: cache_miss_rate.py  cal_decode_violation.py  cal_prefill_violation.py
scripts/util/: calculate_hyper_params.py  check_dangertensors.py  compare_violation.py  concat_dataset.py  get_ids.py  gpu_available.sh  make_dangertensors.py  read_safetensors.py
src/: CMakeLists.txt
src/blitz/: CMakeLists.txt  activation_manager.h  batch.h  blitz_tccl.cpp  cache_manager.h  migration_manager.h  model_loader.cc  model_loader.h  nccl_bcastor.h  stopping.h  stub.h  zigzag_manager.h
src/include/: atomic_channel.hpp  blitz_tccl.h  config.hpp  handle_exception.h  logger.hpp  spinlock.hpp  step_locker.hpp  tokenizer.h  tokenizer.hpp  types.hpp
src/kernel/: CMakeLists.txt  activation.cu  activation.h  add.cu  add.h  attention.h  attention_decode.cu  attention_prefill.cu  cuda_helper.h  embedding.cu  embedding.h  flashinfer_types.cu  flashinfer_types.h  norm.cu  page.cu  page.h  rms_norm.h  sampler.cu  sampler.h
src/layer/: attn.h  embed.h  glu.h  llama_layer.h  lm_head.h
src/model/: CMakeLists.txt  common_hyper.h  hyper.h  llama.h  model.h  safetensors.hpp
src/server/: CMakeLists.txt  args.h  disaggregate.cc
src/service/: CMakeLists.txt  service.cc  service.h
src/util/: CMakeLists.txt  cublas_wrapper.h  cuda_utils.h  debug_utils.h  nccl_utils.cc  nccl_utils.h  output_util.cc  output_util.h  torch_utils.h
tokenizer/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
tokenizer/src/: lib.rs
